# fastapi-template

./: .dockerignore  .env.dev.template  .env.template  .gcloudignore  .gitignore  .hadolint.yaml  Dockerfile  Dockerfile.local  Makefile  README.md  cloudbuild.yaml  compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini.template
app/: main.py
app/api/routes/: api.py  calc.py  hello.py  root.py  routing.py  version.py
app/config/: api_config.py  endpoints.py  env_config.py
app/config/columns/: calc_output_columns.py
app/functions/: calculator.py  hello_agent.py
app/models/: components.py
app/models/api/: calc_request.py  calc_response.py  hello_request.py
dotenvs/: .env.dev.template
makefiles/: api.mk  dev.mk  docker.mk  formatter.mk  prd.mk  test.mk
makefiles/cloudbuild/: cloudbuild.dev.mk
makefiles/configs/: config.dev.mk  config.mk
scripts/: run.sh
tests/api/routes/calc/: test_api_calc_dev.py  test_api_calc_local.py
tests/api/routes/hello/: test_api_hello_dev.py  test_api_hello_local.py
tests/api/routes/version/: test_api_version_dev.py  test_api_version_local.py
tests/config/: testconfig_dev.py
tests/utils/: headers_maker.py
