[tool.poetry]
name = "my_project"
version = "0.1.0"
description = ""
authors = ["v-crn <var.cyrano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
ratelimit = "^2.2.1"
tqdm = "^4.54.1"
numpy = "^1.19.4"
pandas = "^1.1.5"
scipy = "^1.5.4"
pydantic = "^1.7.3"
pydata-google-auth = "^1.1.0"
google-api-python-client = "^1.12.8"
google-auth = "^1.24.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.2"
google-cloud-bigquery = "^2.6.1"
google-cloud-bigquery-storage = "^2.1.0"
pyarrow = "^2.0.0"
pandas-gbq = "^0.14.1"
scikit-learn = "^0.24.0"
icecream = "^2.1.0"
fastapi = "^0.63.0"
starlette = "^0.13.6"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"
autoflake = "^1.4"
flake8 = "^3.8.4"
vulture = "^2.3"
pytest = "^6.2.0"
matplotlib = "^3.3.3"
jupyterlab = "^3.0.5"
ipywidgets = "^7.6.3"

[tool.poetry.extras]
pysen = ["lint"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.black]
line-length = 88

[tool.vulture]
exclude = [".venv/"]
ignore_decorators = []
ignore_names = []
make_whitelist = true
min_confidence = 80
paths = []
sort_by_size = true
verbose = true

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
